.vscode/allianceuat_compare/force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal_Lines__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>tc9_bgl__Entity__r.Name &amp; IF( NOT(ISBLANK(tc9_bgl__Department__r.Name)), 
    &quot;-&quot; &amp; LEFT(tc9_bgl__Department__r.Name, FIND(&quot;-&quot;, tc9_bgl__Department__r.Name &amp; &quot;-&quot;) - 1), 
    &quot;&quot;
) &amp; 

IF( NOT(ISBLANK(tc9_bgl__Natural_Account__r.Name)), 
    &quot;-&quot; &amp; tc9_bgl__Natural_Account__r.Name, 
    &quot;&quot;
)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>