.vscode/allianceuat_compare/force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal_Lines__c/fields/Ledger_Code__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Code__c</fullName>
    <defaultValue>&quot;GL&quot;</defaultValue>
    <label>Ledger Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>