.vscode/allianceuat_compare/force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal_Lines__c/fields/Location_Based_Created__c.field-meta.xml
<CustomField>
    <fullName>Location_Based_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates created as part of the location based workcover / payroll tax mod - EAST-482</inlineHelpText>
    <label>Location Based Created</label>
    <type>Checkbox</type>
</CustomField>