.vscode/allianceuat_compare/force-app/main/default/objects/tc9_bgl__Acc_Payroll_Journal_Lines__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>IF(tc9_bgl__Department__r.Name = &quot;000&quot;, &quot;AU&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>